--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     <h3 style="text-align: center; color: #70b5f0;">KATALOG DRAMA</h3>
     <div class="grid">
         <div class="card">
-            <img src="https://via.placeholder.com/200x300?text=Drama+Istana">
+            <img src="<a href='https://postimg.cc/k29mMQpz' target='_blank'><img src='https://i.postimg.cc/k29mMQpz/photo-2026-02-09-09-01-55.jpg' border='0' alt='photo-2026-02-09-09-01-55'></a>">
             <div class="title">Terlalu malas untuk drama istana</div>
             <button class="btn" onclick="pilih('1')">Tonton</button>
         </div>
         <div class="card">
-            <img src="https://via.placeholder.com/200x300?text=Ayah+Bayiku">
+            <img src="<a href='https://postimg.cc/rd3Zscpd' target='_blank'><img src='https://i.postimg.cc/rd3Zscpd/photo-2026-02-09-09-02-01.jpg' border='0' alt='photo-2026-02-09-09-02-01'></a>">
             <div class="title">Terlahir kembali mencintai ayah bayiku</div>
             <button class="btn" onclick="pilih('2')">Tonton</button>
         </div>
@@ -36,4 +36,5 @@
         }
     </script>
 </body>
+
 </html>
