--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     <h3 style="text-align: center; color: #70b5f0;">KATALOG DRAMA</h3>
     <div class="grid">
         <div class="card">
-            <img src=https://i.postimg.cc/g2LkD4qz/photo-2026-02-09-09-01-55.jpg
+            <img src="https://i.postimg.cc/g2LkD4qz/photo-2026-02-09-09-01-55.jpg">
             <div class="title">Terlalu malas untuk drama istana</div>
             <button class="btn" onclick="pilih('1')">Tonton</button>
         </div>
         <div class="card">
-            <img src="https://i.postimg.cc/TwYzk3Mc/photo-2026-02-09-09-02-01.jpg
+            <img src="https://i.postimg.cc/TwYzk3Mc/photo-2026-02-09-09-02-01.jpg">
             <div class="title">Terlahir kembali mencintai ayah bayiku</div>
             <button class="btn" onclick="pilih('2')">Tonton</button>
         </div>
@@ -38,4 +38,5 @@
 </body>
 
 </html>
+
 
