--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h3 style="text-align: center; color: #70b5f0;">KATALOG DRAMA</h3>
     <div class="grid">
         <div class="card">
-            <img src="https://i.postimg.cc/g2LkD4qz/photo-2026-02-09-09-01-55.jpg">
+            <img src="<a href='https://postimg.cc/k29mMQpz' target='_blank'><img src='https://i.postimg.cc/k29mMQpz/photo-2026-02-09-09-01-55.jpg' border='0' alt='photo-2026-02-09-09-01-55'></a>">
             <div class="title">Terlalu malas untuk drama istana</div>
             <button class="btn" onclick="pilih('1')">Tonton</button>
         </div>
@@ -38,5 +38,6 @@
 </body>
 
 </html>
+
 
 
