--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     <h3 style="text-align: center; color: #70b5f0;">KATALOG DRAMA</h3>
     <div class="grid">
         <div class="card">
-            <img src="https://github.com/kaisardigital/katalog/blob/main/photo_2026-02-09_09-01-55.jpg?raw=true">
+            <img src="hhttps://imgur.com/KGCMJdM">
             <div class="title">Terlalu malas untuk drama istana</div>
             <button class="btn" onclick="pilih('1')">Tonton</button>
         </div>
         <div class="card">
-            <img src="https://github.com/kaisardigital/katalog/blob/main/photo_2026-02-09_09-01-55.jpg?raw=true">
+            <img src="https://imgur.com/KGCMJdM">
             <div class="title">Terlahir kembali mencintai ayah bayiku</div>
             <button class="btn" onclick="pilih('2')">Tonton</button>
         </div>
@@ -38,6 +38,7 @@
 </body>
 
 </html>
+
 
 
 
