--- a/index.html
+++ b/index.html
@@ -17,15 +17,18 @@
     <h3 style="text-align: center; color: #70b5f0;">KATALOG DRAMA</h3>
     <div class="grid">
         <div class="card">
-            <img src="https://i.ibb.co.com/DPrC4cnr/photo-2026-02-09-09-02-01.jpg">
+            <img src="https://i.ibb.co.com/LXGCy378/photo-2026-02-09-09-01-55.jpg">
             <div class="title">Terlalu malas untuk drama istana</div>
         
         </div>
         <div class="card">
             <img src="https://i.ibb.co.com/DPrC4cnr/photo-2026-02-09-09-02-01.jpg">
-            <div class="title">Terlahir kembali mencintai ayah bayiku</div>
+            <div class="title">Terlahir kembali untuk mencintai ayah bayiku</div>
             
         </div>
+        <div class="card">
+            <img src="https://i.ibb.co.com/1Y2YRnf5/photo-2026-02-09-09-02-05.jpg">
+            <div class="title">Dewa perang dan tujuh ratu</div>
     </div>
     <script>
         const tg = window.Telegram.WebApp;
@@ -38,6 +41,7 @@
 </body>
 
 </html>
+
 
 
 
