--- a/index.html
+++ b/index.html
@@ -19,16 +19,19 @@
         <div class="card">
             <img src="https://i.ibb.co.com/LXGCy378/photo-2026-02-09-09-01-55.jpg">
             <div class="title">Terlalu malas untuk drama istana</div>
+            <button class="btn" onclick="pilih('drama_istana_p1')">Tonton Part 1</button>
         
         </div>
         <div class="card">
             <img src="https://i.ibb.co.com/DPrC4cnr/photo-2026-02-09-09-02-01.jpg">
             <div class="title">Terlahir kembali untuk mencintai ayah bayiku</div>
+            <button class="btn" onclick="pilih('Terlahir_p1')">Tonton Part 1</button>
             
         </div>
         <div class="card">
             <img src="https://i.ibb.co.com/1Y2YRnf5/photo-2026-02-09-09-02-05.jpg">
             <div class="title">Dewa perang dan tujuh ratu</div>
+            <button class="btn" onclick="pilih('dewa_perang_p1')">Tonton Part 1</button>
     </div>
     <script>
         const tg = window.Telegram.WebApp;
@@ -41,6 +44,7 @@
 </body>
 
 </html>
+
 
 
 
